Added Electrical Crud Repository